WIP: render normalized text transforms on device
